Add compatibility multipart uploads
